--- a/index.ipynb
+++ b/index.ipynb
@@ -82,11 +82,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(4, 2), (4, 1), (-10, 0)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "four_x_squared_plus_four_x_minus_ten = [(4, 2), (4, 1), (-10, 0)]"
+    "four_x_squared_plus_four_x_minus_ten = [(4, 2), (4, 1), (-10, 0)]\n",
+    "four_x_squared_plus_four_x_minus_ten"
    ]
   },
   {
@@ -106,11 +118,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(4, 3), (11, 2)]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "four_x_cubed_plus_eleven_x_squared = [(4, 3), (11, 2)]"
+    "four_x_cubed_plus_eleven_x_squared = [(4, 3), (11, 2)]\n",
+    "four_x_cubed_plus_eleven_x_squared"
    ]
   },
   {
@@ -133,12 +157,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "def term_output(term, input_value):\n",
-    "    pass"
+    "    return term[0]*input_value**term[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "term_output((11,0),2)"
    ]
   },
   {
@@ -176,7 +220,7 @@
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    pass"
+    "   "
    ]
   },
   {
@@ -587,7 +631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
