Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -176,13 +176,14 @@
        "11"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "term_output((11,0),2)"
+    "term_output((3,2\n",
+    "            ),2)"
    ]
   },
   {
