--- a/index.ipynb
+++ b/index.ipynb
@@ -231,7 +231,7 @@
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "   "
+    "   sum = 0\n"
    ]
   },
   {
