Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -231,7 +231,8 @@
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "total = 0\n"
+    "    total = 0\n",
+    "    \n"
    ]
   },
   {
