Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -232,7 +232,7 @@
    "source": [
     "def output_at(list_of_terms, x_value):\n",
     "    total = 0\n",
-    "    term_outpu\n"
+    "    for i in \n"
    ]
   },
   {
