Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -232,8 +232,15 @@
    "source": [
     "def output_at(list_of_terms, x_value):\n",
     "    total = 0\n",
-    "    for i \n"
+    " b   for i \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
